index file updated and about file added

--- a/about.html
+++ b/about.html
@@ -9,8 +9,7 @@
   <script src='main.js'></script>
 </head>
 <body>
-  <h1>Hi there</h1>
-  <h1>Added one more line in second commit</h1>
-  <h1>Added one more line in Third commit</h1>
+  <h1>Hi there, this is About File</h1>
+  <h1>Added About File in the third commit</h1>
 </body>
 </html>
